# triangle-apocalypse

./: .gitmodules  Cargo.toml  README.md  idea  rustc-ice-2023-12-07T13_32_43-2748.txt  rustc-ice-2023-12-11T13_25_22-8648.txt  todo
.ice-box/: rustc-ice-2023-12-05T23_27_02-16108.txt  rustc-ice-2023-12-05T23_42_16-19428.txt  rustc-ice-2023-12-05T23_44_18-11412.txt  rustc-ice-2023-12-08T07_05_46-12044.txt  rustc-ice-2023-12-08T07_07_51-4036.txt
assets/preload/: finish_line.wgsl  grid.wgsl  splash.wgsl  terrain.wgsl  terrain2.wgsl  terrain3.wgsl  terrain4.wgsl  terrain5.wgsl  terrain6.wgsl  terrain7.wgsl  terrain_2.wgsl  terrain_7.wgsl  terrain_fill.wgsl  terrain_finish_2.wgsl  terrain_finish_7.wgsl
crates/base_game/: cargo.toml
crates/base_game/src/: level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  level6.rs  level7.rs  lib.rs  sdf.rs
crates/jam4/: cargo.toml
crates/jam4/src/: boid.rs  components.rs  finish_line.rs  grid.rs  level.rs  lib.rs  moveable.rs  player.rs  state.rs
crates/jam4/src/boid/: components.rs  config.rs  mod.rs  spawner.rs
crates/jam4/src/level/: mod.rs  registry.rs
crates/jam4/src/mods/: manager.rs  mod.rs
crates/sdfu/src/: lib.rs  mathtypes.rs  primitives.rs  util.rs
crates/utils/: Cargo.toml  cargo.toml
crates/utils/src/: colors.rs  fps.rs  game_time.rs  lib.rs  music.rs  text.rs
docs/: idea  todo  todo.md
src/: colors.rs  jukebox.rs  main.rs  music.rs  splash.rs
src/game/: camera.rs  controls.rs  debug.rs  game_over.rs  game_over_boid.rs  game_over_bounds.rs  game_over_time.rs  gg.rs  grid.rs  level_complete.rs  mod.rs  music.rs
wasm/: index.html
