[package]
name = "bevy-jam-4"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
jam4 = { path = "crates/jam4", version = "0.1.0" }
base_game = { path = "crates/base_game", version = "0.1.0" }
utils = { path = "crates/utils", version = "0.1.0" }
bevy-inspector-egui = "0.21"
bevy_egui = "0.23"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
sdfu = { git = "https://github.com/sanisoclem/sdfu.git", branch = "master", version = "0.3.1-alpha.1", features = [
  "glam",
] }
bevy = "0.12"
bevy_smud = "0.7"
