[package]
name = "bevy-jam-4"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
jam4 = { path = "crates/jam4", version = "0.1.0" }
base_game = { path = "crates/base_game", version = "0.1.0" }
utils = { path = "crates/utils", version = "0.1.0" }
bevy-inspector-egui = "0.21"
bevy_egui = "0.23"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
sdfu = { git = "https://github.com/sanisoclem/sdfu.git", branch = "master", version = "0.3.1-alpha.1", features = [
  "glam",
] }
bevy = "0.12"
bevy_smud = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

[profile.wasm-release]
# Use release profile as default values
inherits = "release"


# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1