[package]
name = "bevy-jam-4"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_smud = { workspace = true }
bevy_hanabi = { workspace = true }
jam4 = { path = "crates/jam4", version = "0.1.0" }
base_game = { path = "crates/base_game", version = "0.1.0" }
utils = { path = "crates/utils", version = "0.1.0" }
bevy-inspector-egui = { version = "0.21", optional = true }
bevy_egui = { version = "0.23", optional = true }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
sdfu = { git = "https://github.com/sanisoclem/sdfu.git", branch = "master", version = "0.3.1-alpha.1", features = [
  "glam",
] }
bevy = { version = "0.12", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
] }
bevy_smud = "0.7"
bevy_hanabi = { git = "https://github.com/sanisoclem/bevy_hanabi.git", branch = "wasm" }

[features]
hotreload = ["bevy/file_watcher"]
debug = ["dep:bevy-inspector-egui", "bevy_egui"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

[profile.wasm-release]
# Use release profile as default values
inherits = "release"


# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
